[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/beach/beach_temp.jpg" type="Texture" id=1]
[ext_resource path="res://ui/Beach/Beach.gd" type="Script" id=2]
[ext_resource path="res://assets/achievement_icons/XIcon.png" type="Texture" id=3]

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

uniform float value = 1.0;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	if (value != 1.0) {
		if (COLOR.r > 0.3 && COLOR.b > 0.3 && COLOR.g > 0.3) {
			COLOR.rgb = vec3(value);
		}
	}
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/value = 1.0

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[node name="Beach" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1279.0
margin_bottom = 718.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="QuitBeach" type="Button" parent="Background"]
material = SubResource( 11 )
margin_left = 1206.0
margin_top = 16.0
margin_right = 1254.0
margin_bottom = 64.0
rect_scale = Vector2( 1, 1.005 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
icon = ExtResource( 3 )
icon_align = 1

[connection signal="button_down" from="Background/QuitBeach" to="." method="_on_QuitBeach_button_down"]
[connection signal="mouse_entered" from="Background/QuitBeach" to="." method="_on_QuitBeach_mouse_entered"]
[connection signal="mouse_exited" from="Background/QuitBeach" to="." method="_on_QuitBeach_mouse_exited"]
[connection signal="pressed" from="Background/QuitBeach" to="." method="_on_QuitBeach_pressed"]
